[gd_scene load_steps=2 format=2]

[ext_resource path="res://TMRGraphEditor.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 50

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 210.0
margin_bottom = 720.0

[node name="ButtonAddInstanceNode" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 210.0
margin_bottom = 20.0
text = "Add Instance Node"

[node name="ButtonAddSetAttributeNode" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 210.0
margin_bottom = 44.0
text = "Add Set Attribute Node"

[node name="ButtonAddRealizeNode" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 210.0
margin_bottom = 68.0
text = "Add Realize Node"

[node name="ButtonAddStringNode" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 72.0
margin_right = 210.0
margin_bottom = 92.0
text = "Add String Node"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 210.0
margin_bottom = 100.0

[node name="ButtonAddInstanceInput" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 104.0
margin_right = 210.0
margin_bottom = 124.0
text = "Add Instance Input"

[node name="ButtonAddStringInput" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 128.0
margin_right = 210.0
margin_bottom = 148.0
text = "Add String Input"

[node name="TMRGraphEdit" type="GraphEdit" parent="VBoxContainer"]
unique_name_in_owner = true
margin_left = 222.0
margin_right = 1080.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -16, 0 )
